--- a/lda/CMakeLists.txt
+++ b/lda/CMakeLists.txt
@@ -2,5 +2,5 @@ PROJECT(ldacv)
 SET(CMAKE_BUILD_TYPE Release)
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
 FIND_PACKAGE( OpenCV REQUIRED )
-ADD_EXECUTABLE(lda main.cpp subspace.cpp)
+ADD_EXECUTABLE(lda main.cpp subspace.cpp fisherfaces.cpp helper.cpp)
 TARGET_LINK_LIBRARIES(lda ${OpenCV_LIBS})
