CMakeLists.txt updated.

--- a/eigenfaces/CMakeLists.txt
+++ b/eigenfaces/CMakeLists.txt
@@ -1,7 +1,9 @@
-PROJECT(eigencv)
-# General
-CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
-FIND_PACKAGE( OpenCV REQUIRED )
-ADD_EXECUTABLE(eigenfaces main.cpp eigenfaces.cpp helper.cpp)
-# OpenCV
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+PROJECT(eigenfacescv)
+SET(CMAKE_BUILD_TYPE Release)
+# you probably need to set this
+#SET(OpenCV_DIR /path/to/your/opencv/installation)
+FIND_PACKAGE(OpenCV REQUIRED) # http://opencv.willowgarage.com
+INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR}/include)
+ADD_EXECUTABLE(eigenfaces src/main.cpp  src/eigenfaces.cpp src/helper.cpp)
 TARGET_LINK_LIBRARIES(eigenfaces ${OpenCV_LIBS})
