machine learning guide updated to OpenCV2.3.

--- a/machinelearning/CMakeLists.txt
+++ b/machinelearning/CMakeLists.txt
@@ -1,5 +1,5 @@
-PROJECT( svm_opencv )
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
+PROJECT( ml_opencv )
 FIND_PACKAGE( OpenCV REQUIRED )
-ADD_EXECUTABLE(svm main.cpp)
-TARGET_LINK_LIBRARIES(svm ${OpenCV_LIBS})
+ADD_EXECUTABLE(ml main.cpp)
+TARGET_LINK_LIBRARIES(ml ${OpenCV_LIBS})
